--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "CUDA C++: Launch",
-            "type": "cuda-gdb",
+            "name": "CUDA编译并运行",
+            "type": "cppvsdbg", //如果是cppdbg会直接调用调试器导致错误，cppvsdbg不会，似乎是因为它背后是用shell进行的
             "request": "launch",
-            "program": "${fileDirname}/test",
-            "preLaunchTask": "mynvcc"
-        },
-        {
-            "name": "CUDA C++: Attach",
-            "type": "cuda-gdb",
-            "request": "attach"
+            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe", //VSCode里的宏，如果不了解可用直接copy，这里指向生成的文件
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "console": "externalTerminal", //使用外部终端，如果是vscode的终端会似乎会根据type设置的调用调试导致闪退
+            "preLaunchTask": "CUDA: nvcc 生成活动文件" //在运行前先进行编译任务，去掉则需要先生成文件再运行
         }
     ]
 }
